# grid-python-template

./: README.md  azure-rollback.sh  azure-rollforward.sh
docs/: setup.md
pharma-ml-pipeline/: .dockerignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
pharma-ml-pipeline/.dvc/: config
pharma-ml-pipeline/.github/: ci-cd.yml
pipewatch-config-master/: .pipewatch-server.yaml
pipewatch-develop/: .gitlab-ci.yml  .package-tools.toml  CHANGELOG.md  README.md  pyproject.toml
pipewatch-develop/.gitlab/: CODEOWNERS
pipewatch-develop/docs/: .pages
pipewatch-develop/docs/developer_guide/: .pages  setup.md
pipewatch-develop/docs/documentation/: architecture.md
pipewatch-develop/docs/user_guide/: .pages
pipewatch-develop/docs/user_guide/backend_server/: .pages  api.md  configuration.md  index.md
pipewatch-develop/docs/user_guide/backend_server/deployment/: .pages  example_setup.md  index.md
pipewatch-develop/docs/user_guide/cli/: .pages  installation.md  usage.md
pipewatch-develop/docs/user_guide/tutorial/: .pages  log_dashboard.md  pipeline_monitor.md
pipewatch-develop/pipewatch/: cli.py  config.py  context.py  queries.py
pipewatch-develop/scripts/mkdocs-macros-local/mkdocs_macros_local/: __init__.py  utils.py
pipewatch-develop/tests/: test_simple.py
pipewatch-lib-develop/: .gitlab-ci.yml  .package-tools.toml  CHANGELOG.md  README.md  pyproject.toml
pipewatch-lib-develop/.gitlab/: CODEOWNERS
pipewatch-lib-develop/pipewatch_lib/: __init__.py  model.py
pipewatch-server-develop/: .package-tools.toml  CHANGELOG.md  pyproject.toml
(+28 files in other folders)
