[build-system]
requires = ["poetry-core>=1.6"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pipewatch"
authors = ["Manuel Schmuck <manuel.schmuck@axelera.ai>"]
description = ""
version = "0.3.2"
readme = "README.md"
packages = [{ include = "pipewatch" }]

[tool.poetry.scripts]
pipewatch = "pipewatch.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
package-lib = { version = "^0.3.0", extras = ["cli", "config"] }
pipewatch-lib = "^0.3.2"
rich = "^13.5.2"
pydantic = "^2.5.0"
pydantic-settings = "^2.0.3"
typer = "^0.9.0"
toml = "^0.10.2"
pyyaml = "^6.0.1"
requests = "^2.31.0"
