[build-system]
requires = ["poetry-core>=1.6"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pipewatch-lib"
authors = ["Manuel Schmuck <manuel.schmuck@axelera.ai>"]
description = ""
version = "0.3.2"
readme = "README.md"
packages = [{ include = "pipewatch_lib" }]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.5.2"
pydantic = "^2.5.0"
